Calendar Module 7.x
==================

===================
Version 7.x-3.x-dev
===================

- Issue #1433046 by thekevinday, Fix broken continue buried in switch.
- Issue #1392306 by johnv and KarenS, Fix broken taxonomy striping.
- Issue #1264520 by bennettee and jackalope, Items without end date displayed as all day.
- Issue #1411862, Add calendar templates for all date fields.
- Issue #1354560, Add a new plugin that works for all entities, not just nodes and mark the old one as deprecated.
- Follow up to Issue #1302052 by benjifisher, More clean up of ical line endings.

======================
Version 7.x-3.0-alpha2
======================

NOTES:
The links at the top of the calendar page have been reworked into tabs. They will not show up
until you clear the caches. Use hook_calendar_links_alter() to alter the links or the titles
or to empty the links array if you don't want to see them.

- Issue #1302052 by benjifisher, penguin25, and helmo, Fix linespace ending problems in ical files.
- Issue #704068, Avoid undefined variable error by not returning a value we don't even need.
- Issue #1388364, Do some clean up of the handling for taxonomy stripes.
- Issue #1303458. Make sure calendar tabs work right without clean urls.
- Issue #1270538, Fix notice for missing index 'access'.
- Issue #1259870, Reinstate the test for a missing date argument for the pager and add to the message a warning that the problem could be that the default date is missing from the argument.
- Issue #1305938 by kristiaanvandeneynde and KarenS, Make sure the overlapping items work correctly with half hour grouping, and don't allow it for custom time groupings.
- Issue #1259992 by jlyon, slerby, and KarenS, The maximum items processing was not working right.
- Issue #1260380, Some items showing up in wrong time periods because wrong value is used to create the start date bucket.
- Issue #1292148, Make scrolling in day and week view optional.